# menstruation.rs

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  default.nix  flake.nix  shell.nix
.github/workflows/: main.yml
data/: allergens.json  codes.json
nix/: rust-channel.nix
src/: allergens.rs  codes.rs  error.rs  lib.rs  main.rs  menu.rs  utility.rs
