[package]
name = "menstruation"
version = "0.1.0"
authors = ["Kierán Meinhardt <kieran.meinhardt@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11.0"
chrono = "0.4.6"
regex = "1"
reqwest = "0.9.5"
scraper = "0.9.0"
serde = "1.0.82"
structopt = "0.2.14"
serde_derive = "1.0.82"
# server dependencies
serde_json = "1.0"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
