[package]
name = "menstruation"
version = "0.1.0"
authors = ["Kierán Meinhardt <kieran.meinhardt@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
serde = "1.0"
structopt = "0.3"
serde_derive = "1.0"
# server dependencies
serde_json = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
